# llvm_playground

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  main.hpp
cmake/: tests.cmake
src/: compiler.cpp  compiler.hpp  inter.cpp  inter.hpp  llvm_lang.cpp  llvm_lang.hpp  main.cpp  parser.cpp  parser.hpp  shared.hpp
test/comp/: comp_func.cpp  comp_operators.cpp
test/inter/: eval_int.cpp  eval_list.cpp  eval_operators.cpp  eval_str.cpp
test/parser/: exp_types.cpp  parse_func.cpp  parse_int.cpp  parse_operators.cpp  parse_str.cpp
